@@ -138,7 +138,8 @@ instead.
 
 \membersection{wxWizardPageSimple::wxWizardPageSimple}\label{wxwizardpagesimplewxwizardpagesimple}
 
-\func{}{wxWizardPageSimple}{\param{wxWizard* }{parent = NULL}, \param{wxWizardPage* }{prev = NULL}, \param{wxWizardPage* }{next = NULL}}
+\func{}{wxWizardPageSimple}{\param{wxWizard* }{parent = NULL}, \param{wxWizardPage* }{prev = NULL}, \param{wxWizardPage* }{next = NULL}, 
+\param{const wxBitmap& }{bitmap = wxNullBitmap}}
 
 Constructor takes the previous and next pages. They may be modified later by
 \helpref{SetPrev()}{wxwizardpagesimplesetprev} or 
