@@ -204,7 +204,7 @@ int wxGenericFontDialog::ShowModal()
 
     if (ret != wxID_CANCEL)
     {
-      m_fontData.chosenFont = dialogFont;
+      m_fontData.m_chosenFont = dialogFont;
     }
 
     return ret;
@@ -257,7 +257,7 @@ void wxGenericFontDialog::CreateWidgets()
   familyChoice->SetStringSelection( wxFontFamilyIntToString(dialogFont.GetFamily()) );
   styleChoice->SetStringSelection(wxFontStyleIntToString(dialogFont.GetStyle()));
   weightChoice->SetStringSelection(wxFontWeightIntToString(dialogFont.GetWeight()));
-  wxString name(wxTheColourDatabase->FindName(m_fontData.fontColour));
+  wxString name(wxTheColourDatabase->FindName(m_fontData.GetColour()));
   colourChoice->SetStringSelection(name);
 
   underLineCheckBox->SetValue(dialogFont.GetUnderlined());
@@ -310,13 +310,13 @@ void wxGenericFontDialog::InitializeFont()
   int fontSize = 12;
   int fontUnderline = FALSE;
 
-  if (m_fontData.initialFont.Ok())
+  if (m_fontData.m_initialFont.Ok())
   {
-      fontFamily = m_fontData.initialFont.GetFamily();
-      fontWeight = m_fontData.initialFont.GetWeight();
-      fontStyle = m_fontData.initialFont.GetStyle();
-      fontSize = m_fontData.initialFont.GetPointSize();
-      fontUnderline = m_fontData.initialFont.GetUnderlined();
+      fontFamily = m_fontData.m_initialFont.GetFamily();
+      fontWeight = m_fontData.m_initialFont.GetWeight();
+      fontStyle = m_fontData.m_initialFont.GetStyle();
+      fontSize = m_fontData.m_initialFont.GetPointSize();
+      fontUnderline = m_fontData.m_initialFont.GetUnderlined();
   }
 
   dialogFont = wxFont(fontSize, fontFamily, fontStyle, fontWeight, (fontUnderline != 0));
@@ -346,7 +346,7 @@ void wxGenericFontDialog::OnChangeFont(wxCommandEvent& WXUNUSED(event))
     col = wxTheColourDatabase->FindColour(colourChoice->GetStringSelection());
     if (col)
     {
-      m_fontData.fontColour = *col;
+      m_fontData.m_fontColour = *col;
       m_previewer->SetForegroundColour(*col);
     }
   }
